nettoyage du code back end ok pour facility et variable
Signed-off-by: jiang lijuan <lijuan.jiang@inrae.fr>